# python-challenge

./: .gitignore  00_warming_up.ipynb  01_what_about_making_trans.ipynb  02_ocr.ipynb  03_re.ipynb  04_follow_the_chain.ipynb  05_peak_hell.ipynb  06_now_there_are_pairs.ipynb  07_smarty.ipynb  08_working_hard.ipynb  09_connect_the_dots.ipynb  10_what_are_you_looking_at.ipynb  11_odd_even.ipynb  12_dealing_evil.ipynb  13_call_him.ipynb  14_walk_around.ipynb  15_whom.ipynb  16_let_me_get_this_straight.ipynb  17_eat.ipynb  README.md  pyproject.toml
